# cellular-automata-acw

./: README.md  comp-acw.code-workspace
automata/: .gitignore  Cargo.toml
automata/benches/: my_benchmark.rs
automata/output/: task1-1-fill.csv  task1-1.csv  task1-2-fill.csv  task1-2.csv  task1-visited-diagonal.csv  task1-visited.csv  task2-1.csv  task2-2.csv
automata/plots/: task1.ipynb  task2.ipynb
automata/src/: growth.rs  lib.rs  main.rs  position.rs  simulate.rs
report/: report.tex  wordcount.sh
report/chapters/: appendix.tex  conclusion.tex  growth.tex  introduction.tex  methodology.tex  movement.tex  titlepage.tex
report/settings/: bibliography.tex  commands.tex  graphics.tex  tables.tex
